--- a/config.org
+++ b/config.org
@@ -697,7 +697,7 @@ Improvements to the basic org-cite frontend
 
 (setq citar-templates
   '((main . "${author editor:30%sn}    ${date year issued:4}    ${title:48}")
-    (suffix . "    ${=key= id:15}    ${=type=:12}    ${tags keywords:*}")
+    (suffix . "    ${=type=:12}")
     (preview . "${author editor:%etal} (${year issued date}) ${title}, ${journal journaltitle publisher container-title collection-title}.\n")
     (note . "Notes on ${author editor:%etal}, ${title}")))
 
