--- a/config.org
+++ b/config.org
@@ -338,6 +338,8 @@ NOTE: Not used atm
   (dashboard-items '((recents   . 5)
                      (projects  . 5)))
 
+  (dashboard-footer-messages '("It's been emotional"
+                               "As greedy as a pig"))
 
   (dashboard-startupify-list '(dashboard-insert-banner
                                dashboard-insert-items
