--- a/config.org
+++ b/config.org
@@ -552,9 +552,7 @@ Live server
 
 #+begin_src emacs-lisp
 (define-derived-mode astro-mode web-mode "astro")
-(setq auto-mode-alist
-      (append '((".*\\.astro\\'" . astro-mode))
-              auto-mode-alist))
+(add-to-list 'auto-mode-alist '(".*\\.astro\\'" . astro-mode))
 #+end_src
 
 ** typescript-mode
