--- a/config.org
+++ b/config.org
@@ -85,6 +85,8 @@ NOTE: remove for org mode (?)
 
 (add-to-list 'nerd-icons-extension-icon-alist '("astro" nerd-icons-sucicon "nf-custom-astro" :face nerd-icons-orange))
 (add-to-list 'nerd-icons-extension-icon-alist '("mjs" nerd-icons-devicon "nf-dev-javascript" :face nerd-icons-yellow))
+(add-to-list 'nerd-icons-extension-icon-alist '("l" nerd-icons-mdicon "nf-md-arm_flex" :face nerd-icons-yellow))
+(add-to-list 'nerd-icons-extension-icon-alist '("y" nerd-icons-devicon "nf-dev-gnu" :face nerd-icons-blue))
 #+end_src
 
 ** nerd-icons-dired
@@ -568,6 +570,18 @@ Live server
 
 #+begin_src emacs-lisp
 (add-to-list 'auto-mode-alist '(".*\\.mjs\\'" . javascript-mode))
+#+end_src
+
+** flex-mode
+
+#+begin_src emacs-lisp
+(add-to-list 'auto-mode-alist '(".*\\.l\\'" . c++-mode))
+#+end_src
+
+** yacc-mode
+
+#+begin_src emacs-lisp
+(add-to-list 'auto-mode-alist '(".*\\.y\\'" . c++-mode))
 #+end_src
 
 
