--- a/config.org
+++ b/config.org
@@ -86,7 +86,7 @@ NOTE: remove for org mode (?)
 (add-to-list 'nerd-icons-extension-icon-alist '("astro" nerd-icons-sucicon "nf-custom-astro" :face nerd-icons-orange))
 (add-to-list 'nerd-icons-extension-icon-alist '("mjs" nerd-icons-devicon "nf-dev-javascript" :face nerd-icons-yellow))
 (add-to-list 'nerd-icons-extension-icon-alist '("l" nerd-icons-mdicon "nf-md-arm_flex" :face nerd-icons-yellow))
-(add-to-list 'nerd-icons-extension-icon-alist '("y" nerd-icons-devicon "nf-dev-gnu" :face nerd-icons-blue))
+(add-to-list 'nerd-icons-extension-icon-alist '("y" nerd-icons-mdicon "nf-md-alpha_y_box" :face nerd-icons-blue))
 #+end_src
 
 ** nerd-icons-dired
