Add lower level headings

--- a/config.org
+++ b/config.org
@@ -662,7 +662,7 @@ Allows customization of bullets (*)
   :after org
   :hook (org-mode . org-bullets-mode)
   :custom
-  (org-bullets-bullet-list '("" "" "")))
+  (org-bullets-bullet-list '("" "" "" "" "")))
 #+end_src
 
 ** visual-fill-mode
