--- a/config.org
+++ b/config.org
@@ -513,6 +513,29 @@ Higher level UI modules (flycheck support, code lenses, etc.)
   (lsp-ui-doc-position 'bottom))
 #+end_src
 
+** company-mode
+
+Better completions
+
+#+begin_src emacs-lisp
+(use-package company
+  :after lsp-mode
+  :hook (prog-mode . company-mode)
+  :bind (:map company-active-map
+         ("<tab>" . company-complete-selection))
+        (:map lsp-mode-map
+         ("<tab>" . company-indent-or-complete-common)))
+#+end_src
+
+** company-box
+
+Prettier company ui
+
+#+begin_src emacs-lisp
+(use-package company-box
+  :hook (company-mode . company-box-mode))
+#+end_src
+
 ** dap-mode
 
 Debugger
