--- a/config.org
+++ b/config.org
@@ -520,11 +520,7 @@ Better completions
 #+begin_src emacs-lisp
 (use-package company
   :after lsp-mode
-  :hook (prog-mode . company-mode)
-  :bind (:map company-active-map
-         ("<tab>" . company-complete-selection))
-        (:map lsp-mode-map
-         ("<tab>" . company-indent-or-complete-common)))
+  :hook (prog-mode . company-mode))
 #+end_src
 
 ** company-box
