--- a/config.org
+++ b/config.org
@@ -850,4 +850,9 @@ Matrix client
 
 #+begin_src emacs-lisp
 (use-package ement)
+(set 'ement-room-left-margin-width 0)
+(set 'ement-room-right-margin-width 8)
+(set 'ement-room-sender-headers t)
+(set 'ement-room-sender-in-headers t)
+(set 'ement-room-sender-in-left-margin nil)
 #+end_src
