--- a/config.org
+++ b/config.org
@@ -849,10 +849,12 @@ Used for project and fleeting notes
 Matrix client
 
 #+begin_src emacs-lisp
-(use-package ement)
-(set 'ement-room-left-margin-width 0)
-(set 'ement-room-right-margin-width 8)
-(set 'ement-room-sender-headers t)
-(set 'ement-room-sender-in-headers t)
-(set 'ement-room-sender-in-left-margin nil)
+(use-package ement
+  :config
+  (setq ement-room-left-margin-width 0
+        ement-room-right-margin-width 0
+        ement-room-sender-headers t
+        ement-room-sender-in-headers t
+        ement-room-sender-in-left-margin nil
+        ement-room-prism 'both))
 #+end_src
