--- a/config.org
+++ b/config.org
@@ -64,9 +64,9 @@
 
 #+begin_src emacs-lisp
 (defun jg/set-font-faces ()
-  (set-face-attribute 'default nil :font "JetBrains Mono" :height 160)
-  (set-face-attribute 'fixed-pitch nil :font "JetBrains Mono" :height 160)
-  (set-face-attribute 'variable-pitch nil :font "Source Sans Pro" :height 180))
+  (set-face-attribute 'default nil :font "JetBrainsMonoNerdFont" :height 160)
+  (set-face-attribute 'fixed-pitch nil :font "JetBrainsMonoNerdFont" :height 160)
+  (set-face-attribute 'variable-pitch nil :font "SourceSans3" :height 180))
 
 (jg/set-font-faces)
 #+end_src
@@ -616,7 +616,7 @@ Highlight current line
                    (org-level-5 . 1.1)
                    (org-level-6 . 1.1)
                    (org-level-7 . 1.1)))
-   (set-face-attribute (car face) nil :font "Source Sans Pro" :weight 'regular :height (cdr face)))
+   (set-face-attribute (car face) nil :font "SourceSans3" :weight 'regular :height (cdr face)))
 
    ;; Use • in lists instead of -
    (font-lock-add-keywords 'org-mode
@@ -675,7 +675,7 @@ Allows customization of bullets (*)
   :after org
   :hook (org-mode . org-bullets-mode)
   :custom
-  (org-bullets-bullet-list '("" "" "" "" "")))
+  (org-bullets-bullet-list '("" "" "" "" "")))
 #+end_src
 
 ** visual-fill-mode
