--- a/config.org
+++ b/config.org
@@ -55,6 +55,7 @@
                 neotree-mode-hook
                 ement-room-mode-hook
                 pdf-view-mode-hook
+                compilation-mode-hook
                 org-mode-hook))
         (add-hook mode (lambda () (display-line-numbers-mode 0))))
 #+end_src
