--- a/config.org
+++ b/config.org
@@ -630,6 +630,14 @@ Highlight current line
 (add-hook 'org-mode-hook (lambda () (add-hook 'after-save-hook #'jg/org-tangle-hook)))
 #+end_src
 
+** DVISVGm
+
+Use SVGs to display latex formulas
+
+#+begin_src emacs-lisp
+(setq org-preview-latex-default-process 'dvisvgm)
+#+end_src
+
 ** Whitespace handling
 
 #+begin_src emacs-lisp
