--- a/config.org
+++ b/config.org
@@ -480,7 +480,8 @@ LSP support
 #+begin_src emacs-lisp
 (use-package lsp-mode
   :init
-  (setq lsp-keymap-prefix "C-c l")
+  (setq lsp-keymap-prefix "C-c l"
+        read-process-output-max (* 1024 1024))
   :hook ((python-mode . lsp-deferred)
          (js-ts-mode . lsp-deferred)
          (c-ts-mode . lsp-deferred)
@@ -489,6 +490,7 @@ LSP support
          (astro-mode . lsp-deferred)
          (typescript-mode . lsp-deferred)
          (tsx-mode . lsp-deferred)
+         (java-mode . lsp-deferred)
          (lsp-mode . lsp-enable-which-key-integration))
   :commands (lsp lsp-deferred)
   :custom
@@ -506,6 +508,18 @@ Higher level UI modules (flycheck support, code lenses, etc.)
   :hook (lsp-mode . lsp-ui-mode)
   :custom
   (lsp-ui-doc-position 'bottom))
+#+end_src
+
+** lsp-java
+
+Handle server installation and session management.
+
+#+begin_src emacs-lisp
+(use-package lsp-java
+  :ensure t
+  :config
+  (add-hook 'java-mode-hook 'lsp)
+  (setq lsp-java-format-settings-url "~/.config/java-formatter/eclipse-java-google-style.xml"))
 #+end_src
 
 ** company-mode
@@ -624,7 +638,6 @@ Highlight current line
   (setq org-ellipsis ""
         org-hide-emphasis-markers t)
   (jg/org-appearance-setup))
-
 
 (add-hook 'org-mode-hook 'jg/org-hook)
 (add-hook 'org-mode-hook (lambda () (add-hook 'after-save-hook #'jg/org-tangle-hook)))
@@ -797,7 +810,7 @@ Used for blog posts and literature and permanent notes
       "#+title: ${title}\n#+date: %U\n\n")
       :unnarrowed t)
        ("l" "literature note" plain
-      "\n* %?\n\n"
+      "\n\n* %?\n\n"
       :if-new
       (file+head "%(expand-file-name citar-org-roam-subdir org-roam-directory)/${citar-citekey}.org"
       "#+title: ${note-title}\n#+date: %U\n")
