--- a/config.org
+++ b/config.org
@@ -637,7 +637,7 @@ Highlight current line
 
 (use-package org
   :config
-  (setq org-ellipsis ""
+  (setq org-ellipsis " ↯"
         org-hide-emphasis-markers t)
   (jg/org-appearance-setup))
 
